Limpieza de todo el codigo